fix: styling (scrollbar and colors)

--- a/src/components/pages/PostsPage/styles/postspage.scss
+++ b/src/components/pages/PostsPage/styles/postspage.scss
@@ -1,22 +1,5 @@
 @use "../../../../styles/modules/variables";
 
-::-webkit-scrollbar {
-    height: 5px;
-  }
-  
-  ::-webkit-scrollbar-track {
-    
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: #47240f;
-    border-radius: 20px;
-    
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: #522f1c;
-  }
   
 .posts-page {
     position: relative;
